--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/jsonwebtoken": "^9.0.2",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2"
@@ -20,6 +21,7 @@
     "@apollo/server": "^4.9.3",
     "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
