--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "@aws-sdk/client-s3": "^3.420.0",
+    "@aws-sdk/s3-request-presigner": "^3.420.0",
     "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
